resolving isssues